<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <Button
        android:id="@+id/switchLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchLayout2"
        android:text="@string/btn_d" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/in_dp50"
        android:ems="8"
        android:text="@string/text"
        android:textColor="#8B008B"
        android:textSize="@dimen/in_sp34" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/in_dp50"
        android:autofillHints="no"
        android:background="#2F4F4F"
        android:ems="15"
        android:hint="@string/infoHint"
        android:inputType="textPersonName"
        android:textColorHint="#FFDEAD" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/in_dp20"
        android:text="@string/button"
        android:textColor="#00FFFF"
        android:textSize="@dimen/in_sp34" />

    <Switch
        android:id="@+id/switchOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/in_dp20"
        android:text="@string/switchOne"
        android:textColor="#FF0000"
        android:textSize="@dimen/in_sp20" />

    <CheckBox
        android:id="@+id/checkBoxOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/in_dp20"
        android:backgroundTint="@color/purple_700"
        android:checked="true" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/in_dp20"
        android:background="#d54"
        android:checked="false"
        android:shadowColor="@color/teal_700"
        android:text="@string/toggleButton"
        android:textColor="#fff"
        android:textOff="@string/btnOn"
        android:textOn="@string/btnOff" />

</LinearLayout>