<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/switchLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="switchLayout"
            android:text="@string/btn_d" />

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/in_dp20"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/text1"
            android:inputType="text" />

        <EditText
            android:id="@+id/textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/in_dp20"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/text2"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/telPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/in_dp20"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/tel"
            android:inputType="phone" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/in_dp20"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/num"
            android:inputType="number" />

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/in_dp20"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/in_dp20"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


    </LinearLayout>

</ScrollView>